@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Authorise a request
interface IRequireRole {
  +MemberRole RequiredRole
}
interface "IRequireOwnership<TResource>" as ownership {
  +Guid ResourceId
}
class "AuthorisationBehaviour<TRequest,TResponse>" as auth {
  +Handle(request: TRequest, next): Task<TResponse>
}
class SessionValidator {
  +ValidateAsync(context: TokenValidatedContext): Task
}
class Session {
  +Guid MemberId
  +Guid CongregationId
  +IsLive(asOf: DateTimeOffset): bool
}
auth ..> IRequireRole : checks declared role
auth ..> ownership : loads declared owner
SessionValidator --> Session : checks sid liveness
@enduml
